# GlobalSearch_a1

./: .gitignore  .travis.yml  CMakeLists.txt  Points.txt  README.md  gen.bat
Drawing/: CMakeLists.txt  isolinesPlotter.cpp  isolinesPlotter.h
Drawing/dislin/lib/win/x64/: discpp.lib
Drawing/dislin/lib/win/x86/: discpp.lib
GKLS/: CMakeLists.txt  gkls_conf.xml  gkls_problem.cpp  gkls_problem.h
GlobalSearch/: CMakeLists.txt  evolvent.cpp  functions.cpp  functions.h  main.cpp
MyFunction/: CMakeLists.txt  MyFunction.vcxproj  MyFunction.vcxproj.filters  my_function.cpp  my_function.h
MyFunction/Debug/: vc141.idb
MyFunction/Debug/MyFunction.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MyFunction.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SRC/: CMakeLists.txt
SRC/src/: Tasks.cpp  Tasks.h
StronginC3/: CMakeLists.txt
_bin/: GlobalSearch.ilk  gkls.ilk  grishagin.ilk  my.ilk  ra.ilk  strongin.ilk
scripts/gkls/: file_gkls.xml  p1_gkls.pl
scripts/gkls/log7_gkls/: AS1_6_100__4.5_simple.txt  AS1_6_10__4.5_simple.txt  AS1_6_11__4.5_simple.txt  AS1_6_12__4.5_simple.txt  AS1_6_13__4.5_simple.txt  AS1_6_14__4.5_simple.txt  AS1_6_15__4.5_simple.txt  AS1_6_16__4.5_simple.txt  AS1_6_17__4.5_simple.txt  AS1_6_18__4.5_simple.txt  AS1_6_19__4.5_simple.txt  AS1_6_1__4.5_simple.txt  AS1_6_20__4.5_simple.txt  AS1_6_21__4.5_simple.txt  AS1_6_22__4.5_simple.txt  AS1_6_23__4.5_simple.txt  AS1_6_24__4.5_simple.txt  AS1_6_25__4.5_simple.txt  AS1_6_26__4.5_simple.txt  AS1_6_27__4.5_simple.txt  AS1_6_28__4.5_simple.txt  AS1_6_29__4.5_simple.txt  AS1_6_2__4.5_simple.txt  AS1_6_30__4.5_simple.txt  AS1_6_31__4.5_simple.txt  AS1_6_32__4.5_simple.txt  AS1_6_33__4.5_simple.txt  AS1_6_34__4.5_simple.txt  AS1_6_35__4.5_simple.txt  AS1_6_36__4.5_simple.txt  AS1_6_37__4.5_simple.txt  AS1_6_38__4.5_simple.txt  AS1_6_39__4.5_simple.txt  AS1_6_3__4.5_simple.txt  AS1_6_40__4.5_simple.txt  AS1_6_41__4.5_simple.txt  AS1_6_42__4.5_simple.txt  AS1_6_43__4.5_simple.txt  AS1_6_44__4.5_simple.txt  AS1_6_45__4.5_simple.txt  (+169 more)
scripts/grishagin/: file_grishagin.xml  p1_grishagin.pl
scripts/grishagin/log7_grishagin/: AS1_4_100__.txt  AS1_4_10__.txt  AS1_4_11__.txt  AS1_4_12__.txt  AS1_4_13__.txt  AS1_4_14__.txt  AS1_4_15__.txt  AS1_4_16__.txt  AS1_4_17__.txt  AS1_4_18__.txt  AS1_4_19__.txt  AS1_4_1__.txt  AS1_4_20__.txt  AS1_4_21__.txt  AS1_4_22__.txt  AS1_4_23__.txt  AS1_4_24__.txt  AS1_4_25__.txt  AS1_4_26__.txt  AS1_4_27__.txt  AS1_4_28__.txt  AS1_4_29__.txt  AS1_4_2__.txt  AS1_4_30__.txt  AS1_4_31__.txt  AS1_4_32__.txt  AS1_4_33__.txt  AS1_4_34__.txt  AS1_4_35__.txt  AS1_4_36__.txt  AS1_4_37__.txt  AS1_4_38__.txt  AS1_4_39__.txt  AS1_4_3__.txt  AS1_4_40__.txt  AS1_4_41__.txt  AS1_4_42__.txt  AS1_4_43__.txt  AS1_4_44__.txt  AS1_4_45__.txt  (+63 more)
